<?xml version="1.0" encoding="utf-8"?>
<com.lzj.vtm.demo.widget.CustomerScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:contentDescription="@null"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2.4.1"
            android:textColor="#333333"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/about_content_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:lineSpacingExtra="2dp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/about_content_1"
                android:textColor="#333333"
                android:textSize="16dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <TextView
                android:id="@+id/about_content_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:lineSpacingExtra="2dp"
                android:lineSpacingMultiplier="1.2"
                android:layout_marginTop="10dp"
                android:text="@string/about_content_2"
                android:textColor="#333333"
                android:textSize="16dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dip"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dip">

            <TextView
                android:id="@+id/about_phone_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="@string/about_phone_1"
                android:drawableLeft="@mipmap/about_phone_1"
                android:textColor="#999999" />

            <TextView
                android:id="@+id/about_phone_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_phone_2"
                android:drawableLeft="@mipmap/about_phone_2"
                android:paddingLeft="8dp"
                android:textColor="#999999" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="15dip"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/about_guanwang"
                android:textColor="#999999" />

            <TextView
                android:id="@+id/about_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_url"
                android:textColor="#999999" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_copyright"
            android:textColor="#999999" />

    </LinearLayout>

</com.lzj.vtm.demo.widget.CustomerScrollView>